hphp/hack/test/typecheck/map_non_static.php.exp
File "map_non_static.php", line 8, characters 45-48:
Invalid expression in constant initializer (Parsing[1002])
